<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.protectodam.ui.listado.ListadoFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_listado" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.protectodam.ui.busqueda.BusquedaFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_busqueda" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.protectodam.ui.ajustes.AjustesFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_ajustes" />
</navigation>